--- a/public/companies.html
+++ b/public/companies.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Buildings</title>
+  <title>Companies</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">  
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/companies.css">
 </head>
 
 <body>
@@ -17,7 +17,9 @@
 
   <div class="container">
     <div class="row">
-      <div id="chart-area" class = "col-sm"></div>
+      <div id="chart-area" class = "col-sm">
+        <svg></svg>
+      </div>
       <div id="chart-data" class = "col-sm"></div>
     </div>
   </div>
