Added SMA interval and offset

--- a/public/nifty.html
+++ b/public/nifty.html
@@ -28,8 +28,8 @@
         <row class="col-sm">
             <div class="input">
             <div id="slider-container"></div>
-            <input type="number" placeholder="SMA interval in Days">
-            <input type="number" placeholder="offset">
+            <input type="number" id="sma-period" min=1 placeholder="SMA interval">
+            <input type="number" min=0 id="offset" placeholder="offset">
             </div>
             <div id="range-label"></div>
         </row>
