Created separate sma for graph and transactions

--- a/public/nifty.html
+++ b/public/nifty.html
@@ -41,6 +41,12 @@
                 <thead></thead>
                 <tbody></tbody>
             </table>
+            <div class="user-input">
+                <label>SMA interval</label>
+                <input type="number" id="sma" min=1>
+                <label>Tolerance</label>
+                <input type="number" id="tolerance" min=0>
+            </div>
             <table border="2" id="analysis" class="table table-striped">
             </table>
         </div>
