Added multiple SMAs

--- a/public/nifty.html
+++ b/public/nifty.html
@@ -28,8 +28,12 @@
         <row class="col-sm">
             <div class="input">
                 <svg id="slider-container"></svg>
-                <input type="number" id="sma-period" min=1 placeholder="SMA interval">
-                <input type="number" min=0 id="offset" placeholder="offset">
+                <label>SMA 1</label>
+                <input type="number" id="sma1" min=1 placeholder="SMA interval">
+                <label>SMA 2</label>
+                <input type="number" id="sma2" min=1 placeholder="SMA interval">
+                <label>SMA 3</label>
+                <input type="number" id="sma3" min=1 placeholder="SMA interval">
             </div>
         </row>
         <div id="chart-area" class="col-sm">
